@@ -17,7 +17,9 @@ def run():
 if __name__ == "__main__":
     # Insert the path to MoinMoin in the start of the path
     import sys, os
-    sys.path.insert(0, os.path.join(os.path.dirname(sys.argv[0]), os.pardir, os.pardir))
+    # we use position 1 (not 0) to give a config dir inserted at 0 a chance
+    # beware: we have a wikiconfig.py at the toplevel directory in the branch
+    sys.path.insert(1, os.path.join(os.path.dirname(sys.argv[0]), os.pardir, os.pardir))
 
     run()
 
